unpackaged/objects/lightningbuddy__Carousel_Image__c.object
<CustomObject>
    <fields>
        <fullName>lightningbuddy__Actions__c</fullName>
        <label>Actions</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>lightningbuddy__Actions__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Image Carousel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>lightningbuddy__Actions__c</referenceTo>
        <relationshipLabel>Carousel Images</relationshipLabel>
        <relationshipName>Carousel_Images</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Image_Url__c</fullName>
        <label>Image Url</label>
        <type>TextArea</type>
    </fields>
    <label>Carousel Image</label>
    <nameField>
        <label>Carousel Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carousel Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>